# audio-agent-md

./: AGENTS.md  IDEA.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
src/audio_agent_md/: __init__.py  audio_bindings.py  cli.py  parser.py
tests/: test_audio_agent.py
